crates/elif-http-derive/tests/ui/fail/unsupported_parameter.stderr
error: Unsupported parameter 'extra_param' of type 'String'. Only path parameters (specified in route) and ElifRequest are supported. Hint: Remove this parameter or add it to the route path like '/users/{extra_param}' and annotate with #[param(extra_param: type)]
  --> tests/ui/fail/unsupported_parameter.rs:17:39
   |
17 |     pub async fn show(&self, id: i32, extra_param: String, req: ElifRequest) -> String {
   |                                       ^^^^^^^^^^^^^^^^^^^

warning: unused import: `param`
 --> tests/ui/fail/unsupported_parameter.rs:3:41
  |
3 | use elif_http_derive::{get, controller, param};
  |                                         ^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
